--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-clean": "^0.3.1",
+    "gulp-rimraf": "^0.1.1",
     "gulp-serve": "^1.0.0",
     "gulp-util": "^3.0.5",
-    "gulp-watch": "^4.2.4",
     "hbsfy": "^2.2.1",
     "json-server": "^0.7.12",
+    "rimraf": "^2.4.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "private": true,
